--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile 'com.squareup:javapoet:1.11.1'
     compile group: 'org.json', name: 'json', version: '20180813'
 
+    implementation 'junit:junit:4.12'
 }
 
 intellij {
